--- a/m3/clip-05/package.json
+++ b/m3/clip-05/package.json
@@ -14,11 +14,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
-    "next": "15.2.0",
-    "node-cache": "^5.1.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
+    "next": "15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "zod": "^3.24.2",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
