--- a/m3/clip-06/package.json
+++ b/m3/clip-06/package.json
@@ -15,10 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "next": "15.2.4",
-    "node-cache": "^5.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
