adding zod schema

--- a/work_in_progress/package.json
+++ b/work_in_progress/package.json
@@ -15,17 +15,18 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.3",
     "next": "15.2.4",
+    "node-cache": "^5.1.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "node-cache": "^5.1.2"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
